flexbox overlap issues

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ content {
 
 .card-left {
   display: flex;
+  flex-wrap: wrap;
   float: left;
   justify-content: center;
   align-items: center;
@@ -92,7 +93,7 @@ content {
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   background-color: purple;
-  width: 500px;
+  width: 30rem;
   margin-left: 10%;
   margin-right: 70%;
   transform-style: preserve-3d;
@@ -107,7 +108,8 @@ content {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
 
-.card-left.flip {
+.card-left.flip,
+.card-left.flip2 {
   --rotate-y: 180deg;
 }
 
@@ -138,7 +140,8 @@ content {
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   background-color: purple;
-  width: 500px;
+  width: 30rem;
+  margin: 1rem;
   margin-left: 70%;
   margin-right: 10%;
   transform-style: preserve-3d;
@@ -153,7 +156,7 @@ content {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
 
-.card-right.flip {
+.card-right.flip1 {
   --rotate-y: 180deg;
 }
 
@@ -176,23 +179,9 @@ content {
   transform: rotateY(180deg);
 }
 
-.project-card-right {
-  display: flex;
-  float: right;
-  align-items: right;
-  flex-direction: row;
-  justify-content: right;
-  background-color: transparent;
-  width: 500px;
-  margin-left: 70%;
-  margin-right: 10%;
-  backdrop-filter: blur(30px);
-  transform: rotate(15deg);
-}
-
 .project-img {
-  height: 200px;
-  width: 200px;
+  height: 20rem;
+  width: 20rem;
 }
 
 .projectTitle {
